setup of the nagivation system in different files and arranged the related packages not yet tested

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">House Pass P2P</string>
+    <string name="database_name">house-pass-db</string>
 </resources>
